* Upgraded Groovy dependency from 2.4.15 to 2.5.6
* Removed io.restassured.response.ValidatableResponseOptions#specification(..), use io.restassured.response.ValidatableResponseOptions#spec instead
* Removed io.restassured.response.ValidatableResponseOptions#content(..), use io.restassured.response.ValidatableResponseOptions#body(..) instead

Changelog 3.3.0 (2019-01-11)
----------------------------
* Upgraded json-schema-validator from version 2.2.6 to 2.2.10 (thanks to thorin for pull request)
* Added io.restassured.mapper.TypeRef class that allows you to deserialize the response to a container with generic type. For example:
    List<Map<String, Object>> products = get("/products").as(new TypeRef<List<Map<String, Object>>>() {});
  Currently this only works for JSON :(
* Add logging functionality to the ResponseSpecBuilder, i.e. you can now do:
    ResponseSpecification spec = new ResponseSpecBuilder().log(LogDetail.ALL).build();
  (issue 579). Thanks to Aleksandr Podkutin for pull request!
* httpmime dependency is updated to version 4.5.3 and is now consistent with httpclient (thanks to Rüdiger Herrmann for pull request).
* Updated commons-fileupload from 1.3.1 to 1.3.3 to fix security issues
* Added a new artifact, rest-assured-all, which you can depend on instead of rest-assured to avoid split packages in Java 9+. (thanks to Tomasz Gaweda for pull request)
* Introduces custom listeners on test validation failures. This makes it possible to hook into Rest Assured and get a callback when the test fails with full access to the request/response specification
  as well as the response. You can do this by implementing the "io.restassured.listener.ResponseValidationFailureListener" and add it to the new "FailureConfig". For example:

      given().config(RestAssured.config().failureConfig(failureConfig().with().failureListeners((requestSpec, responseSpec, response) -> log.info("Rest Assured validation failed!")).when(). ..
