@@ -156,7 +156,7 @@ public class LoggingIfValidationFailsTest {
                 body("id", equalTo(1)).
                 body("content", equalTo("Hello, Johan!"));
 
-        assertThat(writer.toString(), isEmptyString());
+        assertThat(writer.toString(), emptyString());
     }
 
     @Test public void
@@ -176,7 +176,7 @@ public class LoggingIfValidationFailsTest {
                         build());
             fail("Should throw AssertionError");
         } catch (AssertionError e) {
-            assertThat(writer.toString(), not(isEmptyOrNullString()));
+            assertThat(writer.toString(), not(emptyOrNullString()));
         }
     }
 }
