@@ -60,7 +60,7 @@
         <groovy.version>2.5.6</groovy.version>
 		<groovy.range>[2.5,2.6)</groovy.range>
         <gmaven.version>1.5</gmaven.version>
-        <hamcrest.version>1.3</hamcrest.version>
+        <hamcrest.version>2.1</hamcrest.version>
         <jackson1.version>1.9.11</jackson1.version>
         <jackson2.version>2.9.8</jackson2.version>
         <johnzon.version>1.1.11</johnzon.version>
